Removed message settings from the system and specifically the changes to the power system. Closes #66 as incomplete.

--- a/lang/en.json
+++ b/lang/en.json
@@ -93,9 +93,9 @@
       "BothFirst": "Please select a token and target another token",
       "CompendiumOnly": "If you proceed {keyType} will only be created in compendium: not applied.",
       "CombatPowerError": "Cannot use Combat Power right now!",
-      "EditImage": "Failed to open file picker",
-      "EditAudio": "Failed to open file picker",
-      "EditFile": "Failed to open file picker",
+      "EditImage": "Failed to open file picker for image",
+      "EditAudio": "Failed to open file picker for audio",
+      "EditFile": "Failed to open file picker for file",
       "GearError": "Cannot use Gear right now!",
       "GMOnly": "Only GMs can use this script in this mode.",
       "ItemNotFound": "Item not found",
@@ -362,19 +362,6 @@
       "StatusPopup": "Status Information"
     }
   },
-  "ACTOR": {
-    "MessageConfigDescription": "Customize the appearance of power messages for this actor.",
-    "PreviewMessage": "Preview Message",
-    "ResetAllMessageSettings": "Reset All Settings",
-    "PowerMessageSettingsTitle": "Power Message Settings",
-    "SaveSettings": "Save Settings",
-    "ImagePathHint": "Enter the path to an image file or URL.",
-    "ColorHint": "Enter a valid CSS color (e.g., #ff0000 or rgb(255,0,0)).",
-    "DescriptionHint": "Enter a description that will appear in the chat message.",
-    "PowerIncrementPreview": "Power Increased",
-    "DefaultIncrementDescription": "The character's power has increased.",
-    "MessagePreview": "Message Preview"
-  },
   "TYPES": {
     "Actor": {
       "character": "Character",
@@ -428,38 +415,7 @@
     "ShowGearEquipMessagesHint": "If enabled, chat messages will be created when gear items are equipped or unequipped.",
     "EnableSystemSoundsName": "Enable System Sounds",
     "EnableSystemSoundsHint": "Enable or disable system sound effects.",
-    "DefaultPowerMaxName": "Default Power Maximum",
-    "DefaultPowerMaxHint": "Formula used to calculate the default maximum power for characters. Uses actor roll data (e.g. @lvl + @wits.total).",
-    "MessageSettingsName": "Message Settings",
-    "MessageSettingsLabel": "Configure Message Settings",
-    "MessageSettingsHint": "Configure appearance and behavior of system messages.",
-    "MessageSettingsTitle": "Eventide RP System Message Settings",
-    "MessageSettingsDescription": "Customize the appearance and behavior of messages in the Eventide RP System.",
-    "PreviewMessage": "Preview Message",
-    "ResetAllMessageSettings": "Reset All Settings",
-    "SaveMessageSettings": "Save Message Settings",
-    "MessageSettingsSaved": "Message settings saved successfully.",
-    "GeneralMessageSettingsTitle": "General Message Settings",
-    "PowerMessageSettingsTitle": "Power Message Settings",
-    "PowerIncrementTextColorName": "Power Increase Text Color",
-    "PowerIncrementTextColorHint": "The color of text in power increase messages.",
-    "PowerIncrementBgColorName": "Power Increase Background Color",
-    "PowerIncrementBgColorHint": "The background color of power increase messages.",
-    "PowerDecrementTextColorName": "Power Decrease Text Color",
-    "PowerDecrementTextColorHint": "The color of text in power decrease messages.",
-    "PowerDecrementBgColorName": "Power Decrease Background Color",
-    "PowerDecrementBgColorHint": "The background color of power decrease messages.",
-    "PowerIncrementImageName": "Power Increase Image",
-    "PowerIncrementImageHint": "Image displayed when power increases.",
-    "PowerDecrementImageName": "Power Decrease Image",
-    "PowerDecrementImageHint": "Image displayed when power decreases.",
-    "EnablePowerMessagesName": "Enable Power Messages",
-    "EnablePowerMessagesHint": "If enabled, chat messages will be created when power values change.",
     "ErrorResettingColor": "Error resetting color",
-    "AllMessageSettingsReset": "All message settings reset to defaults. Click Save to apply changes.",
-    "ErrorResettingAllMessageSettings": "Error resetting all message settings",
-    "ErrorSavingMessageSettings": "Error saving message settings",
-    "ErrorPreviewingMessage": "Error previewing message",
     "SoundSettingsName": "Sound Effects",
     "SoundSettingsLabel": "Configure Sound Effects",
     "SoundSettingsHint": "Configure custom sound effects for various game events.",
