Added item sheet handling for cursed items

--- a/lang/src/en/item.json
+++ b/lang/src/en/item.json
@@ -25,6 +25,9 @@
         "Equipped": {
           "label": "Equipped"
         },
+        "Cursed": {
+          "label": "Cursed"
+        },
         "Quantity": {
           "label": "Quantity"
         },
