--- a/lang/src/en/forms.json
+++ b/lang/src/en/forms.json
@@ -51,7 +51,9 @@
         "UnequippedGear": "Unequipped Gear",
         "UsageInfo": "Usage Information",
         "Weight": "Weight",
-        "ClassName": "Class"
+        "ClassName": "Class",
+        "Cursed": "Cursed",
+        "Equipped": "Equipped"
       },
       "Buttons": {
         "Change": "Change",
