Implemented setting for gear creator and whether gear should be considered equipped by default.

--- a/lang/en.json
+++ b/lang/en.json
@@ -426,6 +426,8 @@
     "UiThemeContrast": "High Contrast",
     "ShowGearEquipMessagesName": "Show Gear Equip Messages",
     "ShowGearEquipMessagesHint": "If enabled, chat messages will be created when gear items are equipped or unequipped.",
+    "GearEquippedDefaultName": "Gear Creator: Default Equipped",
+    "GearEquippedDefaultHint": "If enabled, gear creator will mark new gear as equipped by default.",
     "EnableSystemSoundsName": "Enable System Sounds",
     "EnableSystemSoundsHint": "Enable or disable system sound effects.",
     "SoundSettingsName": "Sound Effects",
