Removed ability to edit or view details of unequipped gear for players (so as not to spoil cursed items / unexamined items)

--- a/lang/en.json
+++ b/lang/en.json
@@ -181,7 +181,8 @@
         "Weight": "Weight",
         "ClassName": "Class",
         "Cursed": "Cursed",
-        "Equipped": "Equipped"
+        "Equipped": "Equipped",
+        "EquipFirst": "You need to equip this item to see details. If you want to investigate it first ask your GM."
       },
       "Buttons": {
         "Change": "Change",
