--- a/lang/src/en/forms.json
+++ b/lang/src/en/forms.json
@@ -53,7 +53,8 @@
         "Weight": "Weight",
         "ClassName": "Class",
         "Cursed": "Cursed",
-        "Equipped": "Equipped"
+        "Equipped": "Equipped",
+        "EquipFirst": "You need to equip this item to see details. If you want to investigate it first ask your GM."
       },
       "Buttons": {
         "Change": "Change",
