Added increment and decrement options to character sheets to allow players to update the only thing they should be able to with unequipped items.

--- a/lang/en.json
+++ b/lang/en.json
@@ -278,6 +278,12 @@
         },
         "Weight": {
           "label": "Weight"
+        },
+        "Increment": {
+          "label": "Increment"
+        },
+        "Decrement": {
+          "label": "Decrement"
         }
       },
       "Roll": {
