--- a/lang/src/en/item.json
+++ b/lang/src/en/item.json
@@ -36,6 +36,12 @@
         },
         "Weight": {
           "label": "Weight"
+        },
+        "Increment": {
+          "label": "Increment"
+        },
+        "Decrement": {
+          "label": "Decrement"
         }
       },
       "Roll": {
