--- a/lang/en.json
+++ b/lang/en.json
@@ -317,7 +317,8 @@
         "Details": "Details",
         "Effects": "Effects",
         "Prerequisites": "Prerequisites",
-        "Attributes": "Attributes"
+        "Attributes": "Attributes",
+        "CharacterEffects": "Character Effects"
       }
     },
     "Messages": {
