--- a/lang/src/en/item.json
+++ b/lang/src/en/item.json
@@ -75,7 +75,8 @@
         "Details": "Details",
         "Effects": "Effects",
         "Prerequisites": "Prerequisites",
-        "Attributes": "Attributes"
+        "Attributes": "Attributes",
+        "CharacterEffects": "Character Effects"
       }
     }
   }
