--- a/lang/src/en/errors.json
+++ b/lang/src/en/errors.json
@@ -30,7 +30,8 @@
     },
     "Info": {
       "CompendiumItemCreated": "Created {keyType} item {name} in the {packLabel} compendium",
-      "TokenItemCreated": "Created {keyType} item {name} on {count} {targetType} token(s) and in the {packLabel} compendium"
+      "TokenItemCreated": "Created {keyType} item {name} on {count} {targetType} token(s) and in the {packLabel} compendium",
+      "Stored": "Stored {keyType} information in localStorage"
     }
   }
 }
