--- a/lang/src/en/forms.json
+++ b/lang/src/en/forms.json
@@ -55,7 +55,7 @@
         "Cursed": "Cursed",
         "Equipped": "Equipped",
         "EquipFirst": "You need to equip this item to see details. If you want to investigate it first ask your GM.",
-        "DisplayOnToken": "Display Effect On Token"
+        "DisplayOnToken": "Display On Token"
       },
       "Buttons": {
         "Change": "Change",
