--- a/lang/src/en/forms.json
+++ b/lang/src/en/forms.json
@@ -29,7 +29,7 @@
         "Name": "Name",
         "Neutral": "Neutral",
         "Optional": "(Optional)",
-        "OverrideValues": "Override Values",
+        "OverrideValues": "Override",
         "Prerequisites": "Prerequisites",
         "Quantity": "Quantity",
         "RemoveStatuses": "Remove Statuses",
