Updated change-target-status to have support for intensify mode and weaken mode: which respectively intensify good/bad and weaken good/bad effects.

--- a/lang/src/en/forms.json
+++ b/lang/src/en/forms.json
@@ -77,7 +77,9 @@
         "Advantage": "Advantage",
         "Disadvantage": "Disadvantage",
         "Override": "Override",
-        "SubtractMode": "Subtract"
+        "SubtractMode": "Subtract",
+        "IntensifyMode": "Intensify",
+        "WeakenMode": "Weaken"
       },
       "Callouts": {
         "Damage": {
