--- a/lang/en.json
+++ b/lang/en.json
@@ -206,7 +206,9 @@
         "Advantage": "Advantage",
         "Disadvantage": "Disadvantage",
         "Override": "Override",
-        "SubtractMode": "Subtract"
+        "SubtractMode": "Subtract",
+        "IntensifyMode": "Intensify",
+        "WeakenMode": "Weaken"
       },
       "Callouts": {
         "Damage": {
