Implemented "testing mode" setting that allows for user to toggle testing console logs.

--- a/lang/src/en/settings.json
+++ b/lang/src/en/settings.json
@@ -96,6 +96,9 @@
     "ErrorOpeningFilePicker": "Error opening file picker",
     "ErrorSavingSoundSettings": "Error saving sound settings",
     "SoundResetToDefault": "Sound for {0} reset to default.",
-    "NoPlayerPermission": "Players do not have permission to change sound settings."
+    "NoPlayerPermission": "Players do not have permission to change sound settings.",
+
+    "TestingModeName": "Testing Mode",
+    "TestingModeHint": "Enable or disable testing mode console logging for debugging."
   }
 }
