--- a/lang/src/en/misc.json
+++ b/lang/src/en/misc.json
@@ -25,7 +25,8 @@
       "effect": "Effect",
       "feature": "Feature",
       "gear": "Gear",
-      "status": "Status"
+      "status": "Status",
+      "transformation": "Transformation"
     }
   }
 }
