--- a/lang/src/en/actor.json
+++ b/lang/src/en/actor.json
@@ -24,6 +24,10 @@
             "label": "Resolve"
           }
         },
+        "Transformation": {
+          "label": "Transformation",
+          "Remove": "Remove Transformation"
+        },
         "XP": {
           "label": "XP"
         }
