--- a/lang/src/en/errors.json
+++ b/lang/src/en/errors.json
@@ -32,7 +32,8 @@
       "InvalidQuantity": "Quantity must be a positive number",
       "InvalidWeight": "Weight must be a valid number",
       "InvalidCost": "Cost must be a valid number",
-      "TransformationItemTypes": "Transformations can only have combat powers added as embedded items"
+      "TransformationItemTypes": "Only combat powers can be added to transformations.",
+      "MissingAbility": "Missing ability"
     },
     "Info": {
       "CompendiumItemCreated": "Created {keyType} item {name} in the {packLabel} compendium",
