--- a/lang/src/en/misc.json
+++ b/lang/src/en/misc.json
@@ -13,6 +13,10 @@
     "SheetLabels": {
       "Actor": "EventideRpSystem Actor Sheet",
       "Item": "EventideRpSystem Item Sheet"
+    },
+    "UI": {
+      "View": "View",
+      "Remove": "Remove"
     }
   },
   "TYPES": {
