Implemented previously undocumented translation strings.

--- a/lang/src/en/messages.json
+++ b/lang/src/en/messages.json
@@ -32,7 +32,8 @@
       "CombatPower": "Combat Power: {name}",
       "GearTransfer": "Gear Transfer: {name}",
       "Restore": "Restoration: {name}",
-      "GearEquip": "Equipment Change: {name}"
+      "GearEquip": "Equipment Change: {name}",
+      "Transformation": "Transformation: {name}"
     }
   }
 }
