--- a/lang/en.json
+++ b/lang/en.json
@@ -375,7 +375,8 @@
       "CombatPower": "Combat Power: {name}",
       "GearTransfer": "Gear Transfer: {name}",
       "Restore": "Restoration: {name}",
-      "GearEquip": "Equipment Change: {name}"
+      "GearEquip": "Equipment Change: {name}",
+      "Transformation": "Transformation: {name}"
     },
     "Effect": {
       "Inactive": "Inactive Effects",
