New translation strings for transformations

--- a/lang/en.json
+++ b/lang/en.json
@@ -133,7 +133,8 @@
       "InvalidWeight": "Weight must be a valid number",
       "InvalidCost": "Cost must be a valid number",
       "TransformationItemTypes": "Only combat powers can be added to transformations.",
-      "MissingAbility": "Missing ability"
+      "MissingAbility": "Missing ability",
+      "MissingTransformation": "Missing transformation"
     },
     "Info": {
       "CompendiumItemCreated": "Created {keyType} item {name} in the {packLabel} compendium",
@@ -195,7 +196,11 @@
         "Cursed": "Cursed",
         "Equipped": "Equipped",
         "EquipFirst": "You need to equip this item to see details. If you want to investigate it first ask your GM.",
-        "DisplayOnToken": "Display On Token"
+        "DisplayOnToken": "Display On Token",
+        "Size": "Size",
+        "TransformationAttributes": "Transformation Attributes",
+        "CombatPowers": "Combat Powers",
+        "DropCombatPowers": "Drop combat powers here"
       },
       "Buttons": {
         "Change": "Change",
@@ -244,6 +249,11 @@
         "Power": {
           "InsufficientPower": "You don't have enough power to use this! (Need {cost}, have {actorPower})",
           "TargetPower": "You need to target someone to use this power!"
+        },
+        "Transformation": {
+          "NoTargets": "There are no targets selected. This will create a transformation for the compendium only.",
+          "PlayerMode": "You are using the transformation creator in player mode. This can only be used to create transformations for tokens you control. You currently have <strong>{count} tokens(s)</strong> selected.",
+          "WithTargets": "There are <strong>{count} target(s)</strong> selected. This will create a transformation for each target and your compendium."
         }
       },
       "Placeholders": {
@@ -407,7 +417,8 @@
       "GearTransfer": "Transfer Gear",
       "RestoreTarget": "Restore Target",
       "SelectAbilityRoll": "Select Ability Roll",
-      "StatusPopup": "Status Information"
+      "StatusPopup": "Status Information",
+      "TransformationCreator": "Transformation Creator"
     }
   },
   "TYPES": {
