--- a/lang/src/en/ui.json
+++ b/lang/src/en/ui.json
@@ -11,7 +11,8 @@
       "GearTransfer": "Transfer Gear",
       "RestoreTarget": "Restore Target",
       "SelectAbilityRoll": "Select Ability Roll",
-      "StatusPopup": "Status Information"
+      "StatusPopup": "Status Information",
+      "TransformationCreator": "Transformation Creator"
     },
     "MessageHeaders": {
       "Feature": "Feature: {name}",
