Began to decouple handlebars files into partials where possible.

--- a/lang/en.json
+++ b/lang/en.json
@@ -376,7 +376,8 @@
         "SetTo": "set to",
         "StolenCrit": "Stolen Critical!",
         "Transferred": "Transferred",
-        "Unequipped": "Unequipped"
+        "Unequipped": "Unequipped",
+        "Trns": "Trns"
       }
     },
     "MessageHeaders": {
