--- a/lang/src/en/messages.json
+++ b/lang/src/en/messages.json
@@ -23,7 +23,8 @@
         "SetTo": "set to",
         "StolenCrit": "Stolen Critical!",
         "Transferred": "Transferred",
-        "Unequipped": "Unequipped"
+        "Unequipped": "Unequipped",
+        "Trns": "Trns"
       }
     },
     "MessageHeaders": {
