Added a translation string where there was once a string in gear transfer.

--- a/lang/src/en/messages.json
+++ b/lang/src/en/messages.json
@@ -35,6 +35,7 @@
       "Restore": "Restoration: {name}",
       "GearEquip": "Equipment Change: {name}",
       "Transformation": "Transformation: {name}"
-    }
+    },
+    "PartialTransfer": "Only {quantity} items were available to transfer."
   }
 }
