Three major changes. Firstly corrected error with transformation item type that would have allowed multiple to exist on a character at the same time. Secondly added resolve and power adjustment to transformations, Finally updated documentation to support new types.

--- a/lang/src/en/item.json
+++ b/lang/src/en/item.json
@@ -79,6 +79,8 @@
         "CombatPowers": "Combat Powers"
       },
       "Transformation": {
+        "PowerAdjustment": "Power Adjustment",
+        "ResolveAdjustment": "Resolve Adjustment",
         "Size": "Size",
         "Notes": "Transformations can store combat powers that are available when the character transforms.",
         "EmbeddedPowers": "Combat Powers",
