feat: Add auto-link character tokens setting - Add new world-level GM setting autoLinkCharacterTokens (defaults to true) - Automatically link character actor prototype tokens when created - Override _onCreate in EventideRpSystemActor to handle token linking - Add proper localization strings for the new setting - Only applies to character actors, not NPCs - Includes error handling to prevent actor creation failure

--- a/lang/src/en/settings.json
+++ b/lang/src/en/settings.json
@@ -49,6 +49,9 @@
     "GearEquippedDefaultName": "Gear Creator: Default Equipped",
     "GearEquippedDefaultHint": "If enabled, gear creator will mark new gear as equipped by default.",
     
+    "AutoLinkCharacterTokensName": "Auto-Link Character Tokens",
+    "AutoLinkCharacterTokensHint": "When enabled, all newly created tokens of the 'character' type will automatically be linked to their actor.",
+    
     "EnableSystemSoundsName": "Enable System Sounds",
     "EnableSystemSoundsHint": "Enable or disable system sound effects.",
     
