refactor: move sheet themes from UI controls to window controls
refactor: move sheet themes from UI controls to window controls

- Remove theme selector buttons from character sheet template
- Remove theme selector CSS styling (.eventide-actor__theme-selector)
- Add sheet theme cycling functionality to window controls
- Rename themes to avoid copyright issues (blue->night, gold->dawn, green->twilight)
- Update flag name from nameTheme to sheetTheme
- Add cycle functionality that moves through themes in order
- Update language strings for new theme names and functionality
- Remove copyrighted references from CSS comments

This moves theme selection from cluttering the sheet UI to a clean
window control button that cycles through available themes.refactor: move sheet themes from UI controls to window controls

- Remove theme selector buttons from character sheet template
- Remove theme selector CSS styling (.eventide-actor__theme-selector)
- Add sheet theme cycling functionality to window controls
- Rename themes to avoid copyright issues (blue->night, gold->dawn, green->twilight)
- Update flag name from nameTheme to sheetTheme
- Add cycle functionality that moves through themes in order
- Update language strings for new theme names and functionality
- Remove copyrighted references from CSS comments

This moves theme selection from cluttering the sheet UI to a clean
window control button that cycles through available themes.#	packs/erps-macros/000404.log

--- a/lang/en.json
+++ b/lang/en.json
@@ -92,6 +92,15 @@
           "label": "XP"
         }
       },
+      "Errors": {
+        "ActiveTransformation": "Image editing disabled while transformed"
+      },
+      "Controls": {
+        "AutoTokenUpdate": {
+          "label": "Auto Token Update",
+          "hint": "Automatically update the token's image when the actor's image is updated"
+        }
+      },
       "Tabs": {
         "Biography": "Biography",
         "CombatPowers": "Combat Powers",
@@ -138,12 +147,15 @@
       "InvalidCost": "Cost must be a valid number",
       "TransformationItemTypes": "Only combat powers can be added to transformations.",
       "MissingAbility": "Missing ability",
-      "MissingTransformation": "Missing transformation"
+      "MissingTransformation": "Missing transformation",
+      "ConfigureTokenError": "Failed to configure token for {actorName}",
+      "SetSheetThemeError": "Failed to set sheet theme for {actorName}"
     },
     "Info": {
       "CompendiumItemCreated": "Created {keyType} item {name} in the {packLabel} compendium",
       "TokenItemCreated": "Created {keyType} item {name} on {count} {targetType} token(s) and in the {packLabel} compendium",
-      "Stored": "Stored {keyType} information in localStorage"
+      "Stored": "Stored {keyType} information in localStorage",
+      "SheetThemeChanged": "Sheet theme changed to {themeName} for {actorName}"
     },
     "Forms": {
       "ScriptExplanations": {
@@ -420,6 +432,7 @@
     "WindowTitles": {
       "ChangeTargetStatus": "Change Target Status",
       "CombatPowerPopup": "Combat Power Details",
+      "ConfigureToken": "Configure Token",
       "DamageTargets": "Damage Targets",
       "EffectCreator": "Effect Creator",
       "FeaturePopup": "Feature Information",
@@ -428,6 +441,7 @@
       "GearTransfer": "Transfer Gear",
       "RestoreTarget": "Restore Target",
       "SelectAbilityRoll": "Select Ability Roll",
+      "SheetTheme": "Cycle Sheet Theme",
       "StatusPopup": "Status Information",
       "TransformationCreator": "Transformation Creator"
     }
