--- a/lang/src/en/errors.json
+++ b/lang/src/en/errors.json
@@ -34,12 +34,15 @@
       "InvalidCost": "Cost must be a valid number",
       "TransformationItemTypes": "Only combat powers can be added to transformations.",
       "MissingAbility": "Missing ability",
-      "MissingTransformation": "Missing transformation"
+      "MissingTransformation": "Missing transformation",
+      "ConfigureTokenError": "Failed to configure token for {actorName}",
+      "SetSheetThemeError": "Failed to set sheet theme for {actorName}"
     },
     "Info": {
       "CompendiumItemCreated": "Created {keyType} item {name} in the {packLabel} compendium",
       "TokenItemCreated": "Created {keyType} item {name} on {count} {targetType} token(s) and in the {packLabel} compendium",
-      "Stored": "Stored {keyType} information in localStorage"
+      "Stored": "Stored {keyType} information in localStorage",
+      "SheetThemeChanged": "Sheet theme changed to {themeName} for {actorName}"
     }
   }
 }
