--- a/lang/src/en/errors.json
+++ b/lang/src/en/errors.json
@@ -36,13 +36,13 @@
       "MissingAbility": "Missing ability",
       "MissingTransformation": "Missing transformation",
       "ConfigureTokenError": "Failed to configure token for {actorName}",
-      "SetSheetThemeError": "Failed to set sheet theme for {actorName}"
+      "SetSheetThemeError": "Failed to set sheet theme for {userName}"
     },
     "Info": {
       "CompendiumItemCreated": "Created {keyType} item {name} in the {packLabel} compendium",
       "TokenItemCreated": "Created {keyType} item {name} on {count} {targetType} token(s) and in the {packLabel} compendium",
       "Stored": "Stored {keyType} information in localStorage",
-      "SheetThemeChanged": "Sheet theme changed to {themeName} for {actorName}"
+      "SheetThemeChanged": "Sheet theme changed to {themeName} for {userName}"
     }
   }
 }
