Moved theming into player settings.

--- a/lang/en.json
+++ b/lang/en.json
@@ -490,12 +490,14 @@
     "HideNpcInitiativeRollsHint": "Hide the initiative roll results for NPCs from players.",
     "DefaultCombatRoundDurationName": "Default Combat Round Duration",
     "DefaultCombatRoundDurationHint": "Default duration of a combat round in seconds.",
-    "UiThemeName": "UI Theme",
-    "UiThemeHint": "Choose a visual theme for the user interface.",
-    "UiThemeDefault": "Default",
-    "UiThemeDark": "Dark",
-    "UiThemeLight": "Light",
-    "UiThemeContrast": "High Contrast",
+    "SheetThemeName": "Application Theme",
+    "SheetThemeHint": "Choose a visual theme for all system applications. This affects the background, colors, and overall aesthetic of character sheets, item sheets, and other system windows.",
+    "SheetThemeBlue": "Night (Blue)",
+    "SheetThemeGold": "Twilight (Gold)",
+    "SheetThemeGreen": "Dawn (Green)",
+    "SheetThemeBlack": "Midnight (Black)",
+    "SheetThemePurple": "Dusk (Purple)",
+    "SheetThemeLight": "Noon (Light)",
     "ShowGearEquipMessagesName": "Show Gear Equip Messages",
     "ShowGearEquipMessagesHint": "If enabled, chat messages will be created when gear items are equipped or unequipped.",
     "GearEquippedDefaultName": "Gear Creator: Default Equipped",
