Bugfix: drag and drop implementation and gear tab handling.

--- a/lang/src/en/actor.json
+++ b/lang/src/en/actor.json
@@ -26,7 +26,8 @@
         },
         "Transformation": {
           "label": "Transformation",
-          "Remove": "Remove Transformation"
+          "Remove": "Remove Transformation",
+          "DragHint": "Drag to share this transformation with another character"
         },
         "XP": {
           "label": "XP"
