Updated many of our macros to follow the new theme system.

--- a/lang/en.json
+++ b/lang/en.json
@@ -184,6 +184,7 @@
         "IsHeal": "Is Heal",
         "ItemDetails": "Item Details",
         "Label": "Label",
+        "Mode": "Mode",
         "Name": "Name",
         "Neutral": "Neutral",
         "Optional": "(Optional)",
@@ -208,6 +209,7 @@
         "Type": "Type",
         "UnequippedGear": "Unequipped Gear",
         "UsageInfo": "Usage Information",
+        "Value": "Value",
         "Weight": "Weight",
         "ClassName": "Class",
         "Cursed": "Cursed",
