--- a/lang/src/en/forms.json
+++ b/lang/src/en/forms.json
@@ -26,6 +26,7 @@
         "IsHeal": "Is Heal",
         "ItemDetails": "Item Details",
         "Label": "Label",
+        "Mode": "Mode",
         "Name": "Name",
         "Neutral": "Neutral",
         "Optional": "(Optional)",
@@ -50,6 +51,7 @@
         "Type": "Type",
         "UnequippedGear": "Unequipped Gear",
         "UsageInfo": "Usage Information",
+        "Value": "Value",
         "Weight": "Weight",
         "ClassName": "Class",
         "Cursed": "Cursed",
