Added rolls to features to enable situational bonuses more easily for players (IE: gets a +2 to wits checks in city situations)

--- a/lang/src/en/forms.json
+++ b/lang/src/en/forms.json
@@ -36,6 +36,7 @@
         "RemoveStatuses": "Remove Statuses",
         "RestorePower": "Restore Power",
         "RestoreResolve": "Restore Resolve",
+        "Roll": "Roll",
         "RollAbility": "Roll Ability",
         "RollAdvantage": "Advantage",
         "RollBonus": "Roll Bonus",
