--- a/lang/en.json
+++ b/lang/en.json
@@ -194,6 +194,7 @@
         "RemoveStatuses": "Remove Statuses",
         "RestorePower": "Restore Power",
         "RestoreResolve": "Restore Resolve",
+        "Roll": "Roll",
         "RollAbility": "Roll Ability",
         "RollAdvantage": "Advantage",
         "RollBonus": "Roll Bonus",
@@ -532,8 +533,12 @@
     "SoundGearUnequipHint": "Sound played when gear is unequipped.",
     "SoundCombatPowerName": "Combat Power Sound",
     "SoundCombatPowerHint": "Sound played when a combat power is used.",
+    "SoundFeatureRollName": "Feature Roll Sound",
+    "SoundFeatureRollHint": "Sound played when a feature with roll capability is used.",
     "SoundInitiativeName": "Initiative Sound",
     "SoundInitiativeHint": "Sound played when initiative is rolled.",
+    "SoundDiceRollName": "Dice Roll Sound",
+    "SoundDiceRollHint": "Sound played when a dice roll is made.",
     "NoSoundSelected": "No sound file selected.",
     "ErrorPlayingSound": "Error playing sound",
     "ErrorResettingSound": "Error resetting sound",
