--- a/lang/src/en/settings.json
+++ b/lang/src/en/settings.json
@@ -51,8 +51,11 @@
     "GearEquippedDefaultName": "Gear Creator: Default Equipped",
     "GearEquippedDefaultHint": "If enabled, gear creator will mark new gear as equipped by default.",
 
-    "AutoLinkCharacterTokensName": "Auto-Link Character Tokens",
-    "AutoLinkCharacterTokensHint": "When enabled, all newly created tokens of the 'character' type will automatically be linked to their actor.",
+    "CrToXpFormulaName": "CR to XP Calculation",
+    "CrToXpFormulaHint": "Formula for converting Challenge Rating to Experience Points. Use @cr to reference the CR value. Example: 'Math.max(10, Math.floor(@cr * 200 * Math.pow(1.5, @cr)))'",
+
+    "DefaultTokenVisionRangeName": "Default Token Vision Range",
+    "DefaultTokenVisionRangeHint": "Default vision range in grid units for newly created actor tokens. All tokens start with vision enabled.",
 
     "EnableSystemSoundsName": "Enable System Sounds",
     "EnableSystemSoundsHint": "Enable or disable system sound effects.",
