--- a/lang/src/en/misc.json
+++ b/lang/src/en/misc.json
@@ -16,6 +16,8 @@
     },
     "UI": {
       "View": "View",
+      "ViewReadOnly": "View (Read-Only)",
+      "ReadOnly": "Read-Only",
       "Remove": "Remove"
     }
   },
