--- a/lang/src/en/item.json
+++ b/lang/src/en/item.json
@@ -86,7 +86,9 @@
         "EmbeddedPowers": "Combat Powers",
         "NoPowers": "No combat powers added yet.",
         "DropPowerHere": "Drop a combat power here to add it to this transformation.",
-        "ReadOnlyNote": "Note: Embedded combat powers open in read-only mode. To edit a power, modify the original item in the actor's inventory."
+        "ReadOnlyNote": "Note: Embedded combat powers open in read-only mode. To edit a power, modify the original item in the actor's inventory.",
+        "DragToExtract": "Drag to extract this combat power as a new item",
+        "DragNote": "Tip: Drag combat powers to actors, compendiums, or item tabs to create copies."
       }
     }
   }
